Added dotnet root

--- a/.not-zshrc
+++ b/.not-zshrc
@@ -37,7 +37,9 @@ source ~/.not-dotfiles/not-imports/not-aliases.zsh
 ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE="fg=#bbbbbb"
 
 if [[ $UID != 0 && $EUID != 0 ]]; then
+  export DOTNET_ROOT="$HOME/.dotnet"
   path+=("$HOME/.dotnet")
+  path+=("$HOME/.dotnet/tools")
   fpath=(${ASDF_DIR}/completions $fpath)
   . "$HOME/.asdf/asdf.sh"
 
