Added aliases, updated PS1

--- a/.not-zshrc
+++ b/.not-zshrc
@@ -3,9 +3,9 @@
 [ -n "$PS1" ] || \
   { echo "Allowed only sourcing"; exit $ERRCODE; }
 
-_fix_cursor() {
-   echo -ne '\e[3 q'
-}
+#_fix_cursor() {
+#   echo -ne '\e[3 q'
+#}
 
 # precmd_functions+=(_fix_cursor)
 
@@ -47,7 +47,7 @@ if [[ $UID != 0 && $EUID != 0 ]]; then
 
   alias rcode="doas code --ozone-platform=wayland --user-data-dir='/root/.config/Code/' --no-sandbox"
 else
-    alias rcode="code --ozone-platform=wayland --user-data-dir='/root/.config/Code/' --no-sandbox"
+  alias rcode="code --ozone-platform=wayland --user-data-dir='/root/.config/Code/' --no-sandbox"
 fi
 
 ## History file configuration
@@ -66,7 +66,8 @@ setopt hist_verify            # show command with history expansion to user befo
 setopt share_history          # share command history data
 ##
 
-#setopt correctall
+setopt hist_ignore_space
+setopt correctall
 setopt COMPLETE_IN_WORD    # Complete from both ends of a word.
 setopt ALWAYS_TO_END       # Move cursor to the end of a completed word.
 setopt PATH_DIRS           # Perform path search even on command names with slashes.
@@ -92,9 +93,10 @@ zstyle ':completion:*:matches' group 'yes'
 zstyle ':completion:*:options' description 'yes'
 zstyle ':completion:*:options' auto-description '%d'
 zstyle ':completion:*:corrections' format ' %F{green}-- %d (errors: %e) --%f'
-zstyle ':completion:*:descriptions' format ' %F{yellow}-- %d --%f'
 zstyle ':completion:*:messages' format ' %F{purple} -- %d --%f'
-zstyle ':completion:*:warnings' format ' %F{red} Vlad, don’t be stupid %f'
+
+zstyle ':completion:*:warnings' format '%BSorry, no matches for: %d%b'
+zstyle ':completion:*:descriptions' format '%U%B%d%b%u'
 
 zstyle ':completion:*:default' list-prompt '%S%M matches%s'
 zstyle ':completion:*' format ' %F{yellow}-- %d --%f'
@@ -142,8 +144,8 @@ timezsh() {
 
 source ~/.not-dotfiles/not-imports/not-promt.zsh
 
-autoload -U compinit promptinit
-compinit
-
 . /usr/share/zsh/site-functions/zsh-autosuggestions.zsh
 . /usr/share/zsh/site-contrib/fast-syntax-highlighting/F-Sy-H.plugin.zsh
+
+autoload -U compinit promptinit
+compinit
