--- a/.nanorc
+++ b/.nanorc
@@ -1,4 +1,5 @@
-include "~/.not-dotfiles/not-nano/syntax-imported/zshrc.nanorc"
+include "/home/td/.not-dotfiles/not-nano/syntax-imported/zshrc.nanorc"
 set nohelp
 set linenumbers
 set showcursor
+# set mouse
