Added .spicetify and .bin to PATH

--- a/.not-zshrc
+++ b/.not-zshrc
@@ -158,3 +158,6 @@ source ~/.not-dotfiles/not-imports/not-promt.zsh
 autoload -Uz compinit
 compinit
 
+
+export PATH=$PATH:$HOME/.spicetify
+export PATH=$PATH:$HOME/.bin
