--- a/.not-zshrc
+++ b/.not-zshrc
@@ -157,6 +157,7 @@ source ~/.not-dotfiles/not-imports/not-promt.zsh
 autoload -Uz compinit
 compinit
 
+export PODMAN_COMPOSE_WARNING_LOGS=false
 
 export PATH=$PATH:$HOME/.spicetify
 export PATH=$PATH:$HOME/.bin
